...
    ChetiwaLocation(
      city: 'Dubaï',
      country: 'Émirats arabes unis',
      coordinates: Coordinates(latitude: 25.2048, longitude: 55.2708),
    ),
    ChetiwaLocation(
      city: 'Tokyo',
      country: 'Japon',
      coordinates: Coordinates(latitude: 35.6762, longitude: 139.6503),
    ),
    ChetiwaLocation(
      city: 'Sydney',
      country: 'Australie',
...
